# water-info

./: .dockerignore  .gitignore  1.html  AGENTS.md  CLAUDE.md  README.md  database-schema.sql  docker-compose.yml  generate_thesis.py  nginx.conf  skills-lock.json  start-claude.bat
water-info-ai/: .env.example  .gitignore  Dockerfile  README.md  TEST_REPORT.md  pyproject.toml  test_db.py  test_result.json  test_result2.json
water-info-ai/app/: __init__.py  config.py  database.py  graph.py  langgraph_persistence.py  llm.py  main.py  models.py  pipeline.py  plan.py  platform_client.py  risk.py  state.py
water-info-ai/app/agents/: _contract.py  _prompt.py  _routing_rules.py  _topology.py  conversation_assistant.py  data_analyst.py  execution_monitor.py  final_response.py  knowledge_retriever.py  memory.py  notification.py  notification_agent.py  output_validator.py  parallel_dispatch.py  plan_generator.py  plan_reviewer.py  resource_dispatcher.py  risk_analysis_parallel.py  risk_assessor.py  safety_checker.py  state_pruner.py  supervisor.py  validation_parallel.py
water-info-ai/app/api/: risk_scan.py
water-info-ai/app/memory/: __init__.py  models.py  service.py
water-info-ai/app/observability/: otel.py
water-info-ai/app/platform/: __init__.py  agent_audit.py  approvals.py  audit_models.py  audit_recorder.py  dispatch_state_machine.py  dispatch_validator.py  human_in_the_loop.py  output_validator.py  resume_idempotency.py  skill_executor.py  skill_registry.py
water-info-ai/app/rag/: __init__.py  cli.py  embedder.py  loader.py  models.py  query_rewriter.py  reranker.py  retriever.py  service.py  splitter.py
water-info-ai/app/schemas/: __init__.py  agent_outputs.py  routing.py
water-info-ai/app/services/: __init__.py  database.py  (+8 more)
water-info-ai/tests/: test_agent_memory_context_property.py  test_agents.py  test_assessment_writer.py  test_audit_immutability_pbt.py  test_audit_invariants_pbt.py  test_data_tools.py  test_dead_code_regression.py  test_error_code_mapping.py  test_final_response.py  test_graph.py  test_graph_routing.py  test_json_parser.py  test_langgraph_persistence.py  test_llm_output_harness.py  test_loaded_session_smoke.py  test_main_api.py  test_memory_agent.py  test_memory_service.py  test_opinion_acceptance_pbt.py  test_output_validator.py  test_plan_diff.py  test_plan_diff_pbt.py  test_plan_persistence.py  test_plan_review_smoke.py  test_platform_client.py  test_platform_kernel_components.py  test_platform_kernel_foundation.py  test_platform_structured_output.py  test_resource_dispatcher.py  test_reviewer_identity_gate.py  test_risk_scan_scheduler.py  test_risk_tools.py  test_settings_flags.py  test_supervisor_routing.py  test_terminal_agents_draft.py  test_tools.py  test_traces.py  test_version_state_gating_pbt.py
(+503 files in other folders)
