[project]
name = "water-info-ai"
version = "1.0.0"
description = "基于 LangGraph 的防洪应急 AI 服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.9",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "jieba>=0.42",
    "tiktoken>=0.8",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
markers = [
    "smoke: fast API and workflow checks that should pass before deployment",
    "integration: tests that may need a live database or external service",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
